# TrialAndError

./: CMakeLists.txt  Graph.sln
Graph/: A_Star.cpp  A_Star.h  CMakeLists.txt  Graph.cpp  Graph.h  Graph.vcxproj  Graph.vcxproj.filters  Node.cpp  Node.h  Point.cpp  Point.h  euclideanDistance.cpp  euclideanDistance.h  main.cpp
Graph/Debug/: vc142.idb
Graph/Debug/Graph.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Graph.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
googletest-master/googlemock/: CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
googletest-master/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
ut_graph/: main.cpp  test.cpp  ut_A_Star.h  ut_graph.h  ut_graph.vcxproj  ut_node.h  ut_point.h
ut_graph/Debug/ut_graph.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.15168.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  ut_graph.lastbuildstate  ut_graph.write.1u.tlog
